--- a/Scholars Academy/Base.lproj/Main.storyboard
+++ b/Scholars Academy/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -103,6 +104,16 @@
                                     </segue>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QaI-rr-6Wa">
+                                <rect key="frame" x="20" y="348" width="374" height="50"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Sign In Sheets">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="Wo7-40-Gn3" kind="show" id="6IR-Wq-MNF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Du8-Cw-B2t"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -110,9 +121,12 @@
                             <constraint firstItem="pUi-Zg-STa" firstAttribute="top" secondItem="Du8-Cw-B2t" secondAttribute="top" constant="100" id="59U-MF-qrI"/>
                             <constraint firstItem="Du8-Cw-B2t" firstAttribute="trailing" secondItem="NEB-be-wNm" secondAttribute="trailing" constant="20" id="B74-TY-Fnm"/>
                             <constraint firstItem="pUi-Zg-STa" firstAttribute="leading" secondItem="Du8-Cw-B2t" secondAttribute="leading" constant="20" id="Fsl-Wb-aOV"/>
+                            <constraint firstItem="QaI-rr-6Wa" firstAttribute="leading" secondItem="Du8-Cw-B2t" secondAttribute="leading" constant="20" id="Ged-X2-g1N"/>
                             <constraint firstItem="NEB-be-wNm" firstAttribute="top" secondItem="pUi-Zg-STa" secondAttribute="bottom" constant="30" id="PTL-zd-0yk"/>
+                            <constraint firstItem="Du8-Cw-B2t" firstAttribute="trailing" secondItem="QaI-rr-6Wa" secondAttribute="trailing" constant="20" id="Qns-7T-l0n"/>
                             <constraint firstItem="NEB-be-wNm" firstAttribute="leading" secondItem="Du8-Cw-B2t" secondAttribute="leading" constant="20" id="aUZ-EW-uVh"/>
                             <constraint firstItem="Du8-Cw-B2t" firstAttribute="trailing" secondItem="pUi-Zg-STa" secondAttribute="trailing" constant="20" id="f2C-RJ-3mO"/>
+                            <constraint firstItem="QaI-rr-6Wa" firstAttribute="top" secondItem="NEB-be-wNm" secondAttribute="bottom" constant="30" id="kp7-4y-13z"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="N3L-jq-uAC">
@@ -141,7 +155,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Ld-P4-Nsl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2725" y="-165"/>
+            <point key="canvasLocation" x="2725" y="-488"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="52U-u3-9gN">
@@ -157,7 +171,85 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RZQ-fK-xjQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2725" y="581"/>
+            <point key="canvasLocation" x="2725" y="220"/>
+        </scene>
+        <!--SheetsVC-->
+        <scene sceneID="QgL-at-rUh">
+            <objects>
+                <viewController id="Wo7-40-Gn3" customClass="SheetsVC" customModule="Scholars_Academy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CXd-cc-a5R">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sis-wc-ZyZ">
+                                <rect key="frame" x="20" y="108" width="374" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EYn-ok-u5c">
+                                    <size key="itemSize" width="173" height="189"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SheetCell" id="z2m-0h-QFH" customClass="SheetCell" customModule="Scholars_Academy" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="173" height="189"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="HKm-Aj-2GK" customClass="Sign">
+                                            <rect key="frame" x="0.0" y="0.0" width="173" height="189"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sjV-Xd-gJ2">
+                                                    <rect key="frame" x="20" y="20" width="133" height="149"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sheet Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdI-IX-zed" userLabel="SheetTitle">
+                                                            <rect key="frame" x="0.0" y="60" width="133" height="29"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                                            <color key="textColor" systemColor="systemBackgroundColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="tdI-IX-zed" firstAttribute="centerX" secondItem="sjV-Xd-gJ2" secondAttribute="centerX" id="Bu2-kr-lbN"/>
+                                                        <constraint firstItem="tdI-IX-zed" firstAttribute="centerY" secondItem="sjV-Xd-gJ2" secondAttribute="centerY" id="LRD-3G-94B"/>
+                                                        <constraint firstAttribute="width" constant="173" id="MX8-fh-odH"/>
+                                                        <constraint firstAttribute="height" constant="158" id="g4w-X6-GeN"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="sjV-Xd-gJ2" firstAttribute="leading" secondItem="HKm-Aj-2GK" secondAttribute="leading" constant="20" id="JEN-wQ-uvv"/>
+                                                <constraint firstItem="sjV-Xd-gJ2" firstAttribute="top" secondItem="HKm-Aj-2GK" secondAttribute="top" constant="20" id="Nye-qZ-UCA"/>
+                                                <constraint firstAttribute="bottom" secondItem="sjV-Xd-gJ2" secondAttribute="bottom" constant="20" id="Tb2-2m-8Bh"/>
+                                                <constraint firstAttribute="trailing" secondItem="sjV-Xd-gJ2" secondAttribute="trailing" constant="20" id="eH8-aT-FNj"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="173" height="189"/>
+                                        <connections>
+                                            <outlet property="sheetTitle" destination="tdI-IX-zed" id="6Hj-n5-gaS"/>
+                                            <outlet property="view" destination="sjV-Xd-gJ2" id="hGL-kL-xed"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Onf-KK-Cqy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sis-wc-ZyZ" firstAttribute="top" secondItem="Onf-KK-Cqy" secondAttribute="top" constant="20" id="3xX-Qi-HUq"/>
+                            <constraint firstItem="sis-wc-ZyZ" firstAttribute="bottom" secondItem="Onf-KK-Cqy" secondAttribute="bottom" constant="20" id="Vky-1k-l9N"/>
+                            <constraint firstItem="Onf-KK-Cqy" firstAttribute="trailing" secondItem="sis-wc-ZyZ" secondAttribute="trailing" constant="20" id="dVF-Sp-QRB"/>
+                            <constraint firstItem="sis-wc-ZyZ" firstAttribute="leading" secondItem="Onf-KK-Cqy" secondAttribute="leading" constant="20" id="olM-Tb-y1v"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="IUq-Br-QLl"/>
+                    <connections>
+                        <outlet property="collectionView" destination="sis-wc-ZyZ" id="nhU-LX-hV4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0zU-ax-wAX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2724.6376811594205" y="961.60714285714278"/>
         </scene>
         <!--Sign In View Controller-->
         <scene sceneID="rnI-7Q-0sE">
@@ -307,6 +399,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
